@@ -1,4 +1,5 @@
 3.0.9
+ * Fix clean interval not sent to commit log for empty memtable flush (CASSANDRA-12436)
  * Make sure compaction stats are updated when compaction is interrupted (CASSANDRA-12100)
  * Fix potential bad messaging service message for paged range reads
    within mixed-version 3.x clusters (CASSANDRA-12249)
